--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 				<section id="about" class="about">
 					<div class="inner-section">
 						<h1>Стрижем <br>регулярно</h1>
-						<div class="place perspective-card"></div><!-- <img class="place" src="media/place.png" alt="place"> -->
+						<div class="place perspective-card appear"></div>
 						<img class="u" src="media/Uu.png" alt="Uu">
-						<div class="about-block">
+						<div class="about-block appear">
 							<span>О нас</span>
 							<p>Dutt Butt — намного больше, чем просто мужская парикмахерская. Это место, где Вам помогут найти свой собственный, неповторимый стиль. Стоит довериться мастерам один раз, и, поверьте, новый образ не оставит Вас равнодушным.</p>
 						</div>
@@ -65,12 +65,12 @@
 				<section id="portfolio" class="portfolio">
 					<div class="inner-section">
 						<h2 class="instagram">Наше <br>портфолио<br>в instagram</h2>
-						<img src="media/photo1.png" alt="photo" class="photo photo1 perspective-card">
-						<img src="media/photo2.png" alt="photo" class="photo photo2 perspective-card">
+						<img src="media/photo1.png" alt="photo" class="photo photo1 perspective-card appear">
+						<img src="media/photo2.png" alt="photo" class="photo photo2 perspective-card appear">
 						<a href="#" class="arrow"><img src="media/arrow2.png" alt="arrow"></a>
 					</div>
 				</section>
-				<section id="masters">
+				<section id="masters" class="appear">
 					<div class="inner-section masters">
 						<h2>Мастера</h2>
 						<div class="master1 master">
@@ -88,7 +88,7 @@
 						<div class="ellipse"></div>
 					</div>
 				</section>
-				<section class="price">
+				<section class="price appear">
 					<div class="inner-section">
 						<h2>Услуги и цены</h2>
 						<div class="price-table">
